2000-10-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* cribbage/cribbage.h: Mark msg() and addmsg() with printf format
	attributes.
	* hack/extern.h: Make vpline() with printf format attribute.

	* monop/misc.c (next_play): Fix undefined order of side effects.
	* monop/prop.c (bid): Likewise.

2000-09-25  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Version 2.12.

	* NEWS, bsd-games.lsm, bsd-games-non-free.lsm: Update.

	* battlestar/com2.c, battlestar/com4.c, battlestar/com5.c,
	battlestar/cypher.c, battlestar/extern.h, battlestar/globals.c,
	battlestar/words.c: Update from NetBSD CVS after merge.

	* battlestar/extern.h: Add AUXVERB.
	* battlestar/words.c (wlist): Use AUXVERB for "climb", "move" and
	"make".
	* battlestar/cypher.c (cypher): Object to words in the place for a
	verb that aren't a VERB or KNIFE.  Allow for AUXVERBs.
	* battlestar/com2.c (put), battlestar/com4.c (take): When creating
	new verbs from "put on", "put down" and "take off", make their
	type be VERB.
	Partly from Paul Janzen <pjanzen@foatdi.harvard.edu>.
	* tests/battlestar.out3: Update.
	* tests/battlestar.in42, tests/battlestar.out42,
	tests/battlestar.in43, tests/battlestar.out43: New tests.
	* tests/battlestar.test: Update.

	* battlestar/extern.h: Add flags OBJ_PERSON and OBJ_NONOBJ.
	* battlestar/globals.c (objflags): Use them.

	* battlestar/extern.h: Define new macros for handling "a" versus
	"an" and "is" versus "are" wording issues.
	* battlestar/globals.c (objflags): Add OBJ_AN flags; reformat.
	From OpenBSD.
	* battlestar/com2.c (wearit, murder), battlestar/com4.c (take,
	eat): Use these macros.
	* tests/battlestar.in41, tests/battlestar.out41: New test.
	* tests/battlestar.test: Update.

	* battlestar/cypher.c (cypher): Remove excess blank lines.  From
	OpenBSD.

	* battlestar/com5.c (love): Fix loving already loved goddess;
	avoid fallthrough after loving goddess; give error on "love
	amulet".  From OpenBSD.
	* tests/battlestar.in40, tests/battlestar.out40: New test.